教材删除增加字段